# onnxruntime

./: .gitmodules  ArtifactEvaluation.md  Artifact_Evaluation.md  NOTICES.md  ThirdPartyNotices.txt  dockerfile_ort_nvidia_gpu.sycl  setup.py
.gitlab/: README.md  ci.yml
.gitlab/dockerfiles/: Dockerfile.base  Dockerfile.compute_aorta  Dockerfile.intel_ocl  Dockerfile.ort
cmake/: CMakeLists.txt  onnxruntime.cmake  onnxruntime_optimizer.cmake  onnxruntime_providers.cmake  onnxruntime_python.cmake  onnxruntime_unittests.cmake
csharp/src/Microsoft.ML.OnnxRuntime/: NativeMethods.shared.cs  SessionOptions.shared.cs
dockerfiles/: Dockerfile.sycl
docs/: ContribOperators.md
imagenet_examples/: 10.jpg.txt  10nchw.jpg.txt
js/common/: package-lock.json
js/node/: package-lock.json
js/react_native/: package.json
js/web/: package-lock.json
networks/: CMakeLists.txt  arg_parser.hpp  imagenet_labels.hpp  test_network.cpp  utils.hpp
onnxruntime/core/common/: cpuid_info.cc
onnxruntime/core/framework/: debug_node_inputs_outputs_utils.cc  execution_frame.cc  execution_frame.h  tensor.cc  tensorprotoutils.h  utils.cc
onnxruntime/core/graph/: graph.cc  model.cc
onnxruntime/core/providers/: get_execution_providers.cc
onnxruntime/core/session/: inference_session.cc  onnxruntime_c_api.cc  ort_apis.h  provider_stubs.cc
onnxruntime/python/: onnxruntime_inference_collection.py  onnxruntime_pybind_schema.cc  onnxruntime_pybind_state.cc  onnxruntime_pybind_state_common.h
onnxruntime/test/framework/: inference_session_test.cc  test_utils.h
onnxruntime/test/onnx/: README.txt  main.cc
onnxruntime/test/providers/: provider_test_utils.cc
onnxruntime/test/python/: onnxruntime_test_python.py
onnxruntime/test/shared_lib/: utils.cc
onnxruntime/test/util/: default_providers.cc
patches/: ort_sycl_cuda.patch  sycl_blas.patch  sycl_blas_target.patch  sycl_dnn.patch  sycl_dnn_target.patch
tools/ci_build/: build.py
winml/adapter/: winml_adapter_c_api.cpp
(+110 files in other folders)
